[gd_scene load_steps=21 format=3 uid="uid://c57duuo5p7mc0"]

[ext_resource type="Script" path="res://tester.gd" id="1"]
[ext_resource type="Environment" uid="uid://du5gp6ah0abgv" path="res://default_env.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://cgqfdwd4g5e14" path="res://models/test_bed/test_bed.tscn" id="3"]
[ext_resource type="ArrayMesh" uid="uid://btydvpp0agbfj" path="res://models/godot_ball.res" id="4_7al4s"]
[ext_resource type="Material" uid="uid://bbfkhkmct7wu3" path="res://test_materials/blue.tres" id="5"]
[ext_resource type="Material" uid="uid://b0qkg55h84i3f" path="res://test_materials/white.tres" id="6"]
[ext_resource type="Material" uid="uid://d3u3snuqdn404" path="res://test_materials/gray.tres" id="7"]
[ext_resource type="Material" path="res://test_materials/white_plastic.tres" id="8"]
[ext_resource type="Material" uid="uid://qpdv7evfgbyw" path="res://test_materials/mirror.tres" id="9"]
[ext_resource type="Material" uid="uid://djut62ilojfmq" path="res://test_materials/dark_wood.tres" id="10"]
[ext_resource type="Material" uid="uid://ca5id5w12cprn" path="res://test_materials/stones.tres" id="11"]
[ext_resource type="Material" uid="uid://dfsu6vtygh0tc" path="res://test_materials/brick.tres" id="12"]
[ext_resource type="Material" uid="uid://dtui5o3potpen" path="res://test_materials/wool.tres" id="13"]
[ext_resource type="Material" uid="uid://cg7l6w2h0aq22" path="res://test_materials/aluminium.tres" id="14"]
[ext_resource type="Material" uid="uid://c5oxndmf0jbu3" path="res://test_materials/marble.tres" id="15"]
[ext_resource type="Material" uid="uid://dv76cxap5uj7y" path="res://test_materials/cheese.tres" id="16"]
[ext_resource type="Material" uid="uid://bx0jnmhhr8qwh" path="res://test_materials/wet_sand.tres" id="17"]
[ext_resource type="Material" uid="uid://dct7oit1go38a" path="res://test_materials/rock.tres" id="18"]
[ext_resource type="Material" uid="uid://bv6dr534vwcr1" path="res://test_materials/ice.tres" id="19"]
[ext_resource type="Material" uid="uid://y4yhjq6ftc3l" path="res://test_materials/toon.tres" id="20"]

[node name="MaterialTester" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2")

[node name="Testers" type="Node3D" parent="."]

[node name="White Plastic" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/White Plastic"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("8")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Mirror" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Mirror"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("9")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Dark Wood" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Dark Wood"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("10")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Cheese" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Cheese"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("16")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Stones" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Stones"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("11")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Brick" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Brick"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("12")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Wool" parent="Testers" instance=ExtResource("3")]

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Wool"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("13")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Aluminium" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Aluminium"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("14")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Marble" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Marble"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("15")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Wet Sand" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Wet Sand"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("17")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Rock" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Rock"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("18")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Ice" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Ice"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("19")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="Toon" parent="Testers" instance=ExtResource("3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, 0)

[node name="GodotBall" type="MeshInstance3D" parent="Testers/Toon"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.5, -4)
mesh = ExtResource("4_7al4s")
surface_material_override/0 = ExtResource("20")
surface_material_override/1 = ExtResource("6")
surface_material_override/2 = ExtResource("5")
surface_material_override/3 = ExtResource("7")

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(0.877582, 0, -0.479427, 0, 1, 0, 0.479427, 0, 0.877582, -36, 2.8, -4)

[node name="RotationX" type="Node3D" parent="CameraHolder"]
transform = Transform3D(1, 0, 0, 0, 0.877582, 0.479427, 0, -0.479427, 0.877582, 0, 0, 0)

[node name="Camera" type="Camera3D" parent="CameraHolder/RotationX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
fov = 65.0
near = 0.1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="OptionButton" parent="UI"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 30.0
offset_bottom = 36.0
focus_mode = 0

[node name="Previous" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -64.0
offset_right = 152.0
offset_bottom = -16.0
grow_vertical = 0
focus_mode = 0
text = "«  Previous"

[node name="Next" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -64.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "Next  »"

[node name="MaterialName" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -58.0
offset_right = 0.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24

[node name="Quit" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -89.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 52.0
grow_horizontal = 0
focus_mode = 0
text = "Quit"

[connection signal="item_selected" from="UI/Background" to="." method="_on_bg_item_selected"]
[connection signal="pressed" from="UI/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="UI/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="UI/Quit" to="." method="_on_quit_pressed"]
